# llm-eval-TFG

./: .gitignore  LICENSE  README.md  configurations.sh  llm_llama_eval.py  log.py  modelList.txt  ollama.py  ollama_handler.py  prometheus.py  prometheus_handler.py  prompts.txt  pruebas.py  pyproject.toml  requirements.txt  salida.txt  todo.txt
data_representation/: app.py  dashboard.py  prueba.py
gpu_exporter/: detect_gpu.py  gpu_export_metrics.py  requirements.txt
logger/: log.py
metrics/: ollama_metrics.csv  prometheus_metrics.csv  prometheus_metrics.txt  response.txt
ollama/: answers.txt  model_list.txt  ollama.py  ollama_handler.py  prompts.txt
prometheus/: gpu_querys.txt  prometheus.py  prometheus_handler.py  querys.txt
versions/: node_exporter_versions.txt  ollama_versions.txt  update_versions.py
