[project]
name = "llmprofiler"
version = "0.1.0"
description = "Profile LLMs on different hardware"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh==2.4.3",
    "numpy==1.23.5",
    "paramiko>=3.5.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "streamlit>=1.46.0",
]
